--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-test-renderer": "^16.13.1",
     "shuffle-array": "^1.0.1"
   },
   "scripts": {
@@ -38,6 +37,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/react-hooks": "^3.4.1"
+    "@testing-library/react-hooks": "^3.4.1",
+    "react-test-renderer": "^16.13.1"
   }
 }
