--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-countdown-circle-timer": "^2.3.7",
     "react-countdown-clock": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
